--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ Obsidian Digital Inc provide you the most professional website products.
 
 */
 
+ a:hover{
+    
+ text-decoration: none;   
+}
+
 
 
 body {
@@ -357,6 +362,21 @@ background-image: url("img/temp/triange-bg.png");
     }
 
 .main-content-section h4{
+    
+ font-weight: 600;    
+ color: #652d90;
+    
+}
+
+
+.main-content-section .news p{
+    
+    font-size: 1.1em;
+    line-height: 1.4em;
+    }
+
+.main-content-section .news h4{
+    font-size: 1.1em;
     
  font-weight: 600;    
  color: #652d90;
